--- a/resources/frontend/css/source.css
+++ b/resources/frontend/css/source.css
@@ -29,15 +29,9 @@
 
 .bg-masfarre-geometry {
   background-image: url("../images/inspiration-geometry.png");
-  /* background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; */
 }
 .bg-masfarre-party {
   background-image: url("../images/food.png");
-  /* background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; */
 }
 
 .clip-footer {
@@ -55,16 +49,57 @@
 }
 
 a.events-gallery > img {
-  @apply rounded-lg;
-  @apply transition-all;
-  @apply duration-500;
-  @apply ease-in-out;
-  /* hover brightness */
-  @apply hover:brightness-125;
-  /* image 4:3 */
+  @apply rounded-lg transition-all duration-500 ease-in-out hover:brightness-125;
   aspect-ratio: 4 / 3;
-  /* image offset  */
   object-position: center;
-  /* image cover */
   object-fit: cover;
 }
+
+.spectrum-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 0; 
+}
+
+.spectrum-bar {
+    flex-grow: 1; 
+    background-color: rgba(255, 255, 255, 0.5);
+    animation: spectrum-animation 1.2s ease-in-out infinite alternate;
+    margin: 0 4px; 
+    border-radius: 4px; /* Added border radius */
+}
+
+@keyframes spectrum-animation {
+    0% {
+        transform: scaleY(0.05);
+    }
+    100% {
+        transform: scaleY(1);
+    }
+}
+
+/* Assign Heights and Delays */
+.spectrum-bar:nth-child(1) { height: 45%; animation-delay: 0.1s; }
+.spectrum-bar:nth-child(2) { height: 60%; animation-delay: 0.2s; }
+.spectrum-bar:nth-child(3) { height: 30%; animation-delay: 0.3s; }
+.spectrum-bar:nth-child(4) { height: 75%; animation-delay: 0.4s; }
+.spectrum-bar:nth-child(5) { height: 50%; animation-delay: 0.5s; }
+.spectrum-bar:nth-child(6) { height: 25%; animation-delay: 0.6s; }
+.spectrum-bar:nth-child(7) { height: 65%; animation-delay: 0.7s; }
+.spectrum-bar:nth-child(8) { height: 40%; animation-delay: 0.8s; }
+.spectrum-bar:nth-child(9) { height: 80%; animation-delay: 0.9s; }
+.spectrum-bar:nth-child(10) { height: 55%; animation-delay: 1.0s; }
+.spectrum-bar:nth-child(11) { height: 35%; animation-delay: 1.1s; }
+.spectrum-bar:nth-child(12) { height: 70%; animation-delay: 1.2s; }
+
+/* Assign Brand Colors with 50% transparency */
+.spectrum-bar:nth-child(4n + 1) { background-color: rgba(193, 23, 32, 0.5); } 
+.spectrum-bar:nth-child(4n + 2) { background-color: rgba(232, 96, 49, 0.5); } 
+.spectrum-bar:nth-child(4n + 3) { background-color: rgba(232, 52, 119, 0.5); } 
+.spectrum-bar:nth-child(4n + 4) { background-color: rgba(166, 83, 155, 0.5); } 
