--- a/resources/frontend/css/source.css
+++ b/resources/frontend/css/source.css
@@ -72,7 +72,7 @@ a.events-gallery > img {
     background-color: rgba(255, 255, 255, 0.5);
     animation: spectrum-animation 1.2s ease-in-out infinite alternate;
     margin: 0 4px; 
-    border-radius: 4px; /* Added border radius */
+    border-radius: 4px; 
 }
 
 @keyframes spectrum-animation {
@@ -84,22 +84,22 @@ a.events-gallery > img {
     }
 }
 
-/* Assign Heights and Delays */
-.spectrum-bar:nth-child(1) { height: 45%; animation-delay: 0.1s; }
-.spectrum-bar:nth-child(2) { height: 60%; animation-delay: 0.2s; }
-.spectrum-bar:nth-child(3) { height: 30%; animation-delay: 0.3s; }
-.spectrum-bar:nth-child(4) { height: 75%; animation-delay: 0.4s; }
-.spectrum-bar:nth-child(5) { height: 50%; animation-delay: 0.5s; }
-.spectrum-bar:nth-child(6) { height: 25%; animation-delay: 0.6s; }
-.spectrum-bar:nth-child(7) { height: 65%; animation-delay: 0.7s; }
-.spectrum-bar:nth-child(8) { height: 40%; animation-delay: 0.8s; }
-.spectrum-bar:nth-child(9) { height: 80%; animation-delay: 0.9s; }
-.spectrum-bar:nth-child(10) { height: 55%; animation-delay: 1.0s; }
-.spectrum-bar:nth-child(11) { height: 35%; animation-delay: 1.1s; }
-.spectrum-bar:nth-child(12) { height: 70%; animation-delay: 1.2s; }
+/* Assign Heights, Delays, and Durations for varied movement */
+.spectrum-bar:nth-child(1) { height: 45%; animation-delay: 0.1s; animation-duration: 1.3s; }
+.spectrum-bar:nth-child(2) { height: 60%; animation-delay: 0.3s; animation-duration: 1.1s; }
+.spectrum-bar:nth-child(3) { height: 30%; animation-delay: 0.5s; animation-duration: 1.4s; }
+.spectrum-bar:nth-child(4) { height: 75%; animation-delay: 0.2s; animation-duration: 1.0s; }
+.spectrum-bar:nth-child(5) { height: 50%; animation-delay: 0.4s; animation-duration: 1.2s; }
+.spectrum-bar:nth-child(6) { height: 25%; animation-delay: 0.6s; animation-duration: 1.5s; }
+.spectrum-bar:nth-child(7) { height: 65%; animation-delay: 0.15s; animation-duration: 1.1s; }
+.spectrum-bar:nth-child(8) { height: 40%; animation-delay: 0.35s; animation-duration: 1.3s; }
+.spectrum-bar:nth-child(9) { height: 80%; animation-delay: 0.55s; animation-duration: 1.0s; }
+.spectrum-bar:nth-child(10) { height: 55%; animation-delay: 0.25s; animation-duration: 1.4s; }
+.spectrum-bar:nth-child(11) { height: 35%; animation-delay: 0.45s; animation-duration: 1.2s; }
+.spectrum-bar:nth-child(12) { height: 70%; animation-delay: 0.65s; animation-duration: 1.5s; }
 
 /* Assign Brand Colors with 50% transparency */
 .spectrum-bar:nth-child(4n + 1) { background-color: rgba(193, 23, 32, 0.5); } 
 .spectrum-bar:nth-child(4n + 2) { background-color: rgba(232, 96, 49, 0.5); } 
 .spectrum-bar:nth-child(4n + 3) { background-color: rgba(232, 52, 119, 0.5); } 
-.spectrum-bar:nth-child(4n + 4) { background-color: rgba(166, 83, 155, 0.5); } 
+.spectrum-bar:nth-child(4n + 4) { background-color: rgba(166, 83, 155, 0.5); }
